--- a/index.ipynb
+++ b/index.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Introduction</a></span></li><li><span><a href=\"#Objectives\" data-toc-modified-id=\"Objectives-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Objectives</a></span></li><li><span><a href=\"#Modeling-a-Zoo\" data-toc-modified-id=\"Modeling-a-Zoo-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Modeling a Zoo</a></span></li><li><span><a href=\"#Creating-an-Abstract-Superclass\" data-toc-modified-id=\"Creating-an-Abstract-Superclass-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Creating an Abstract Superclass</a></span></li><li><span><a href=\"#Using-Our-Objects\" data-toc-modified-id=\"Using-Our-Objects-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Using Our Objects</a></span></li><li><span><a href=\"#Summary\" data-toc-modified-id=\"Summary-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Summary</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Inheritance - Lab\n",
@@ -45,12 +55,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Animal(object):\n",
-    "    pass"
+    "    def __init__(self, name, weight):\n",
+    "        self.name = name\n",
+    "        self.size = ''\n",
+    "        self.weight = 0\n",
+    "        self.species = ''\n",
+    "        self.food_type = ''\n",
+    "        self.nocturnal = True\n",
+    "    \n",
+    "    def sleep(self):\n",
+    "        if self.nocturnal == True:\n",
+    "            self.sl = 'day'\n",
+    "        else:\n",
+    "            self.sl = 'night'\n",
+    "        print(f'I am sleeping during the {self.sl}')\n",
+    "    \n",
+    "    def eat(self, food):\n",
+    "        self.food = food\n",
+    "        if self.food_type == 'carnivore':\n",
+    "            if self.food == 'meat':\n",
+    "                return f'{self.name} the {self.species} thinks {self.food} is yummy!'\n",
+    "            else:\n",
+    "                return \"I don't eat this!\"\n",
+    "        elif self.food_type == 'herbivore':\n",
+    "            if self.food == 'meat':\n",
+    "                return \"I don't eat this!\"\n",
+    "            else:\n",
+    "                return f'{self.name} the {self.species} thinks {self.food} is yummy!'\n",
+    "        else:\n",
+    "            return f'{self.name} the {self.species} thinks {self.food} is yummy!'\n",
+    "    \n",
+    "    \n",
+    "        \n",
+    "    "
    ]
   },
   {
@@ -72,12 +114,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Elephant(Animal):\n",
-    "    pass"
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        \n",
+    "        self.size = 'enormous'\n",
+    "        \n",
+    "        self.species = 'elephant'\n",
+    "        self.food_type = 'herbivore'\n",
+    "        self.nocturnal = False"
    ]
   },
   {
@@ -95,12 +144,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Tiger(Animal):\n",
-    "    pass"
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.name = name\n",
+    "        self.size = 'large'\n",
+    "        self.weight = weight\n",
+    "        self.species = 'tiger'\n",
+    "        self.food_type = 'carnivore'\n",
+    "        self.nocturnal = True"
    ]
   },
   {
@@ -118,12 +174,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Raccoon(Animal):\n",
-    "    pass"
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.name = name\n",
+    "        self.size = 'small'\n",
+    "        self.weight = weight\n",
+    "        self.species = 'raccoon'\n",
+    "        self.food_type = 'omnivore'\n",
+    "        self.nocturnal = True"
    ]
   },
   {
@@ -141,12 +204,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Gorilla(Animal):\n",
-    "    pass"
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.name = name\n",
+    "        self.size = 'large'\n",
+    "        self.weight = weight\n",
+    "        self.species = 'gorilla'\n",
+    "        self.food_type = 'herbivore'\n",
+    "        self.nocturnal = False"
    ]
   },
   {
@@ -176,12 +246,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_animal_to_zoo(zoo, animal_type, name, weight):\n",
-    "    pass"
+    "    animal_type_list = ['Gorilla', 'Raccoon', 'Tiger', 'Elephant']\n",
+    "    if animal_type == animal_type_list[0]:\n",
+    "        class_inst = Gorilla(name, weight)\n",
+    "    elif animal_type == animal_type_list[1]:\n",
+    "        class_inst = Raccoon(name, weight)\n",
+    "    elif animal_type == animal_type_list[2]:\n",
+    "        class_inst = Tiger(name, weight)\n",
+    "    else:\n",
+    "        class_inst = Elephant(name, weight)\n",
+    "    zoo.append(class_inst)\n",
+    "    return zoo\n",
+    "        "
    ]
   },
   {
@@ -200,11 +281,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.Elephant at 0x25efadc9710>,\n",
+       " <__main__.Elephant at 0x25efadc97b8>,\n",
+       " <__main__.Raccoon at 0x25efadc9828>,\n",
+       " <__main__.Raccoon at 0x25efadc9860>,\n",
+       " <__main__.Gorilla at 0x25efadc9898>,\n",
+       " <__main__.Tiger at 0x25efadc98d0>,\n",
+       " <__main__.Tiger at 0x25efadc9908>,\n",
+       " <__main__.Tiger at 0x25efadc9940>]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Create your animals and add them to the 'zoo' in this cell!"
+    "# Create your animals and add them to the 'zoo' in this cell!\n",
+    "zoo = []\n",
+    "add_animal_to_zoo(zoo, 'Elephant', 'Jumbo', 5000)\n",
+    "add_animal_to_zoo(zoo, 'Elephant', 'Mumbo', 4000)\n",
+    "add_animal_to_zoo(zoo, 'Raccoon', 'Yamaha', 200)\n",
+    "add_animal_to_zoo(zoo, 'Raccoon', 'Suzuki', 300)\n",
+    "add_animal_to_zoo(zoo, 'Gorilla', 'KingKong', 600)\n",
+    "add_animal_to_zoo(zoo, 'Tiger', 'Sherkhan', 1000)\n",
+    "add_animal_to_zoo(zoo, 'Tiger', 'Woods', 200)\n",
+    "add_animal_to_zoo(zoo, 'Tiger', 'Syberia', 700)"
    ]
   },
   {
@@ -226,12 +334,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "def feed_animals(zoo, time='Day'):\n",
-    "    pass"
+    "    def eat_animal(anima_noc):\n",
+    "        if anima_noc == 'carnivore':\n",
+    "            food = 'meat'\n",
+    "        else:\n",
+    "            food = 'plants'\n",
+    "        return food\n",
+    "    \n",
+    "    for animal in zoo:\n",
+    "        \n",
+    "        if time == 'Day':\n",
+    "            if animal.nocturnal == False:\n",
+    "                print(animal.eat(eat_animal(animal.food_type)))\n",
+    "        else:\n",
+    "            if animal.nocturnal == True:\n",
+    "                print(animal.eat(eat_animal(animal.food_type)))\n",
+    "            "
    ]
   },
   {
@@ -243,10 +366,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jumbo the elephant thinks plants is yummy!\n",
+      "Mumbo the elephant thinks plants is yummy!\n",
+      "KingKong the gorilla thinks plants is yummy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed_animals(zoo)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -259,10 +394,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yamaha the raccoon thinks plants is yummy!\n",
+      "Suzuki the raccoon thinks plants is yummy!\n",
+      "Sherkhan the tiger thinks meat is yummy!\n",
+      "Woods the tiger thinks meat is yummy!\n",
+      "Syberia the tiger thinks meat is yummy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed_animals(zoo, 'Night')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -296,7 +445,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": true,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
